# PythonGameDevelopment2022

./: .flake8  .gitignore  MANIFEST.in  README.md  __main__.py  dodo.py  pyproject.toml  setup.cfg
Zelda/: __init__.py  __main__.py
Zelda.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Zelda/audio/: __init__.py
Zelda/button/: Button.py  __init__.py
Zelda/companion/: Companion.py
Zelda/config/: Config.py  SpriteSheet.py  __init__.py
Zelda/game/: Game.py  __init__.py
Zelda/level/: Camera.py  Level.py  Support.py
Zelda/map_graphics/: map_0.tmx  map_1.tmx
Zelda/menu/: DeathScreen.py  EscMenu.py  StartMenu.py  __init__.py
Zelda/ui/: UI.py  __init__.py
audio/: __init__.py
audio/soundpack/: SoundPack.py
button/: Button.py
companion/: Companion.py  companion.py
config/: Config.py  SpriteSheet.py  __init__.py
docs/: Zelda.audio.rst  Zelda.audio.soundpack.rst  Zelda.companion.rst  Zelda.game.rst  Zelda.level.rst  Zelda.menu.rst  Zelda.objects.main.rst  Zelda.rst  conf.py  index.rst  mod.rst
docs/modules/: audio.rst  button.rst  companion.rst  game.rst  menu.rst  objects.enemy.rst  objects.friendly.rst  objects.weapon.rst
game/: Game.py  __init__.py
level/: Camera.py  Level.py  Support.py  __init__.py
locale/companion/: messages.pot
locale/start_menu/: messages.pot
map_graphics/: map_0.tmx  map_1.tmx
menu/: DeathScreen.py  EscMenu.py  StartMenu.py
objects/enemy/: Enemy.py  FastShooter.py  Ninja.py  Skeleton.py  Swordsman.py  (+2 more)
tests/: test_companion.py  test_get_dust.py  test_soundpack.py  test_support.py
ui/: UI.py
(+239 files in other folders)
