[metadata]
name = Zelda
version = 1.0.0

url = https://github.com/CocoDiorr/PythonGameDevelopment2022/

[options]
packages =
		Zelda
		Zelda.audio
		Zelda.button
		Zelda.companion
		Zelda.config
		Zelda.game
		Zelda.level
		Zelda.locale
		Zelda.menu
		Zelda.objects
		Zelda.objects.enemy
		Zelda.objects.friendly
		Zelda.objects.main
		Zelda.objects.weapon
		Zelda.ui

include_package_data = True

install_requires = 
		pygame
		ipsedixit

[options.package_data]
Zelda = 
		pics/*/*/*
		pics/*/*
		pics/*
		locale/*/*/LC_MESSAGES/*.mo
		fonts/*
		map_graphics/*
		map_graphics/*/*
		map_graphics/*/*/*
		texts/*/*
		audio/*/*
		audio/*/*/*
		

[options.entry_points]
console_scripts = 
		Zelda = Zelda:main
